--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TODOListRecuperacion" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TODOListRecuperacion" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="android:forceDarkAllowed">false</item>
 
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:background">#333333</item>
+        <item name="android:textColor">#FFF</item>
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
