--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ProfileFragment"
     android:background="#222"
-    >
+>
 
     <TextView
+        android:id="@+id/test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Profile Fragment" />
+        android:text="Profile Fragment"
+    />
 
 </FrameLayout>
