--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -33,6 +33,8 @@
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_baseline_add_24"
         android:contentDescription="add task"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:translationY="-40dp"
+    />
 
 </FrameLayout>
