--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,17 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ProfileFragment"
     android:background="#222"
+    android:rowCount="6"
+    android:columnCount="1"
 >
 
     <TextView
-        android:id="@+id/test"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile Fragment"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_height="50dp"
     />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/userName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Profile Fragment"
+        android:textSize="30sp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:layout_gravity="center"
+    />
+
+
+    <TextView
+        android:id="@+id/userEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="User Email"
+        android:textSize="30sp"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:layout_gravity="center"
+    />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_row="3"
+        android:layout_column="0"
+    />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="500dp"
+        android:layout_row="4"
+        android:layout_column="0"
+        android:layout_gravity="center"
+    >
+
+        <ImageView
+            android:id="@+id/profilePic"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            tools:src="@android:drawable/sym_def_app_icon"
+            android:background="#444"
+        />
+
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/selectProfileImage"
+        android:text="Change Profile Pic"
+        android:layout_row="5"
+        android:layout_column="0"
+        android:layout_gravity="center"
+    />
+
+</GridLayout>
