--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,10 +32,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="User Email"
-        android:textSize="30sp"
+        android:textSize="15sp"
         android:layout_row="2"
         android:layout_column="0"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
     />
 
     <TextView
